HOTFIX: Replace List.of with Arrays.asList
Cherry-pick of e7a7efd introduces a compilation error
due to the use of List.of.